# Tamagoyaki

./: .clangd  .gitignore  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  Makefile  README.md  flake.nix  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  test.yml
cmake/: TableGenHelpers.cmake
cranelift-mlir/: CMakeLists.txt
cranelift-mlir/include/: CMakeLists.txt
cranelift-mlir/include/Cranelift/: CMakeLists.txt  Cranelift.h  CraneliftDialect.td
cranelift-mlir/src/Cranelift/: CMakeLists.txt  CraneliftPasses.cpp
cranelift-mlir/test/: CMakeLists.txt
cranelift-mlir/test/lit/: lit.cfg.py  lit.site.cfg.py.in
cranelift-mlir/tools/: CMakeLists.txt  cranelift-mlir-opt.cpp
docs/: Doxyfile  Makefile  README.md  conf.py  index.md  requirements.txt
docs/api/: cpp.md  index.md
docs/dialects/: index.md
docs/guides/: building.md  end-to-end.md  index.md
herbie-mlir/: .gitignore  CMakeLists.txt
herbie-mlir/eval/: Snakefile
herbie-mlir/eval/fpcore/: complex-sine-and-cosine.fpcore  nmse-example-3.3.fpcore  nmse-example-3.5.fpcore  nmse-example-3.6.fpcore  nmse-example-3.9.fpcore  nmse-p42,-negative.fpcore  nmse-p42,-positive.fpcore  nmse-problem-3.2.1,-negative.fpcore  nmse-problem-3.3.2.fpcore  nmse-problem-3.3.4.fpcore  nmse-problem-3.3.6.fpcore  nmse-problem-3.3.7.fpcore  nmse-problem-3.4.2.fpcore  nmse-problem-3.4.3.fpcore  nmse-section-3.11.fpcore  probabilities-in-a-clustering-algorithm.fpcore
herbie-mlir/examples/: rules.rkt
herbie-mlir/include/: CMakeLists.txt  HerbieMLIR.h  HerbieMLIRDialect.td  HerbieMLIRPasses.td  HerbieUtils.h  IntervalSearch.h  gmp.h  mpfr.h  rival.h
herbie-mlir/rival/: CMakeLists.txt
herbie-mlir/src/: CMakeLists.txt  HerbieMLIROpInterfaces.cpp  HerbieMLIRPasses.cpp  IntervalSearch.cpp  IntervalSearchPass.cpp  LocalError.cpp  RivalExternalModels.cpp
herbie-mlir/test/: CMakeLists.txt
herbie-mlir/test/lit/: interval-analysis.mlir  lit.cfg.py  lit.site.cfg.py.in  lower-herbie-sound-ops.mlir
herbie-mlir/test/lit/optimize_sqrt_example_split/: ir.mlir  patterns.mlir
herbie-mlir/tools/: CMakeLists.txt  fpcore-mlir.py  herbie-mlir-opt.cpp  herbie-pdl.py  insert-fpcore-alternative.py  mlir-fpcore.py  plot-accuracies.py
herbie_mlir/: .gitignore  CMakeLists.txt
herbie_mlir/cmake/: fix_rival3_native.cmake
herbie_mlir/eval/: Snakefile
herbie_mlir/eval/fpcore/: complex-square-root.fpcore  nmse-example-3.1.fpcore  nmse-example-3.10.fpcore  nmse-example-3.4.fpcore  nmse-example-3.7.fpcore  nmse-example-3.8.fpcore  nmse-problem-3.2.1,-positive.fpcore  nmse-problem-3.3.1.fpcore  nmse-problem-3.3.3.fpcore  nmse-problem-3.3.5.fpcore  nmse-problem-3.4.1.fpcore  nmse-problem-3.4.4.fpcore  nmse-problem-3.4.5.fpcore  nmse-problem-3.4.6.fpcore  nmse-section-3.5.fpcore
herbie_mlir/include/: BatchEvaluateExternalModels.h  CMakeLists.txt  HerbieMLIRDialect.td  HerbieMLIROpInterfaces.h  IntervalSearch.h  LocalError.h  RivalExternalModels.h
herbie_mlir/rival/: CMakeLists.txt
herbie_mlir/src/: BatchEvaluateExternalModels.cpp  CMakeLists.txt  HerbieMLIRDialect.cpp  HerbieMLIRPasses.cpp  LocalError.cpp  RivalExternalModels.cpp
herbie_mlir/test/: CMakeLists.txt
herbie_mlir/test/lit/: lit.cfg.py  lower-herbie-constant.mlir  optimize_sqrt_example.mlir
herbie_mlir/test/lit/optimize_sqrt_example_split/: ir.mlir
herbie_mlir/tools/: CMakeLists.txt  __init__.py  extract_accuracies.py  fpcore_mlir.py  herbie-mlir-opt.cpp  herbie_pdl.py  plot_accuracies.py  plot_matcher_speedup.py  plot_timing.py
include/: CMakeLists.txt  EmatchDialect.h  EmatchDialect.td  EmatchUtils.h  EquivalenceCAPI.h  EquivalenceDialect.h  EquivalenceDialect.td  EquivalenceUtils.h  PotatoCAPI.h  PotatoDialect.h  PotatoDialect.td  TamagoyakiCAPI.h  TamagoyakiDialect.h  TamagoyakiDialect.td  TamagoyakiTiming.h  TamatchDialect.h  TamatchDialect.td
include/Utils/: ClassOpUnionFind.h  EqOpUnionFind.h  HashConsPatternRewriter.h  MultiMatcherPDLByteCode.h  MutableScopedHashTable.h
nix/patches/: circt-mlir-tblgen-path.patch
python/: CMakeLists.txt  Potato.td  PotatoExtension.cpp  Tamagoyaki.td  TamagoyakiExtension.cpp
python/mmlir/dialects/: potato.py  tama.py  tamagoyaki.py
rover-mlir/: .gitignore  CMakeLists.txt
rover-mlir/benchmarks/: AdpcmDecoder.mlir  FirFilter.mlir  MulSel.mlir  ShiftMult.mlir  ShiftedFma.mlir
rover-mlir/include/: CMakeLists.txt
rover-mlir/include/Comb/: CMakeLists.txt  Comb.h  CombDialect.td
rover-mlir/include/Datapath/: CMakeLists.txt  Datapath.h  DatapathDialect.td
rover-mlir/include/HW/: CMakeLists.txt  HW.h  HW.td  HWDialect.td
rover-mlir/include/Rover/: CMakeLists.txt  Rover.h  RoverDialect.td
rover-mlir/src/: CMakeLists.txt
rover-mlir/src/Comb/: CMakeLists.txt  CombDialect.cpp  CombPasses.cpp
rover-mlir/src/Datapath/: CMakeLists.txt  DatapathDialect.cpp
rover-mlir/src/HW/: CMakeLists.txt  HWDialect.cpp
rover-mlir/src/Rover/: CMakeLists.txt  RoverPasses.cpp
rover-mlir/test/: CMakeLists.txt  basic.comb.mlir  lit.cfg.py  lit.site.cfg.py.in  rewrites.mlir  rewrites_pdl_interp.mlir  rover-insert-graph.mlir
rover-mlir/tools/: CMakeLists.txt  rover-mlir-opt.cpp
src/: CMakeLists.txt  EmatchDialect.cpp  EquivalenceCAPI.cpp  EquivalenceDialect.cpp  PotatoCAPI.cpp  PotatoDialect.cpp  TamagoyakiCAPI.cpp  TamagoyakiDialect.cpp  TamagoyakiTiming.cpp  TamatchDialect.cpp  potato-opt.cpp  tamagoyaki-opt.cpp
src/Utils/: ClassOpUnionFind.cpp  EqOpUnionFind.cpp  HashConsPatternRewriter.cpp  MultiMatcherPDLByteCode.cpp  MutableScopedHashTable.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/lit/: constants_select.mlir  ematch_mul_to_shift.mlir  ematch_saturate_individual_matchers.mlir  equivalence-class-fold.mlir  equivalence-graph-size.mlir  equivalence-insert-graph.mlir  equivalence-ops-errors.mlir  greedy_select.mlir  greedy_select_stale_candidate_cost.mlir  hashconsgraph.mlir  pass.mlir  pdl_interp_mul_to_shift.mlir  smoke.mlir  tamagoyaki-insert-egraph.mlir  tamagoyaki-ops-errors.mlir  tamagoyaki_mul_to_shift.mlir  tamatch-smoke.mlir
test/python/: smoketest.py
(+13 files in other folders)
