[project]
name = "tamagoyaki"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "cmake-format>=0.6.13",
    "lit>=18.1.8",
    "mlir-wheel>=20260304",
    "pre-commit>=4.5.1",
    "snakemake>=9",
    "snakemake-executor-plugin-cluster-generic>=1",
    "xdsl>=0.56.2",
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
tamagoyaki = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"herbie-mlir/tools" = "herbie_mlir/tools"

[dependency-groups]
dev = [
    "tamagoyaki",
]

[project.entry-points.'xdsl.universe']
tools = 'herbie_mlir.tools:EQSAT_UNIVERSE'

[tool.uv]
find-links = ["https://llvm.github.io/eudsl"]
